package.json update

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "vetted-demoapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://DukeRawat.github.io/DynamicReduxForm",
   "dependencies": {
+    "gh-pages": "^1.2.0",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.3",
     "react-dates": "^17.2.0",
@@ -13,6 +15,8 @@
     "redux-form": "^7.4.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
